Implimenting Tutorial, with Notes, without Tests

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <!-- still load stylesheets like normal, but they go in your vendor file  -->
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ember-quickstart.css">
 
